--- a/react-gallery/index.html
+++ b/react-gallery/index.html
@@ -7,9 +7,12 @@
 </head>
 
 <body>
-    <div class="container"></div> 
+    <h1>Hi</h1>
+
+    <span class="container"></span>
 
     <script type="text/javascript" src="build/bundle.js"></script>
+
 </body>
 
 </html>
